Move TabManager and ApplicationState to /bika; removed 4 legacy TabManagers

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script>dojoConfig = {parseOnLoad: true, debug: true}</script>
   <script type="text/javascript" src="js/dojoos/dojo/dojo.js"></script>
   <script>
-    require(["dijit/layout/BorderContainer", "dijit/Menu", "dijit/MenuItem", "dijit/MenuSeparator", "customizedModule/TabManager", "dijit/tree/ObjectStoreModel", "dijit/Tree", "dojo/store/JsonRest", "dijit/layout/ContentPane", "customizedModule/SelectX", "customizedModule/ApplicationState", "dojo/domReady!"],
+    require(["dijit/layout/BorderContainer", "dijit/Menu", "dijit/MenuItem", "dijit/MenuSeparator", "bika/TabManager", "dijit/tree/ObjectStoreModel", "dijit/Tree", "dojo/store/JsonRest", "dijit/layout/ContentPane", "customizedModule/SelectX", "bika/ApplicationState", "dojo/domReady!"],
       function(BorderContainer, Menu, MenuItem, MenuSeparator, TabManager, ObjectStoreModel, Tree, JsonRest, ContentPane, SelectX, ApplicationState) {
 
         /////
