--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -60,7 +60,7 @@
       //Components
       "dijit/form/Select",
       //ApplicationState [TEST]
-      "customizedModule/ApplicationState"
+      "bika/ApplicationState"
       ], function(dom, domConstruct, query, domAttr, Memory, Cache, JsonRest, Observable, request, on, Deferred, Select, ApplicationState){ 
 
     ///////
