finished rebase with steven's code; application select now exposed

--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,10 @@
     <title>Login to Bika</title>
     <style>
 
+      * {
+        outline: none;
+      }
+
       html {
         font-family: Arial, sans-serif;
       }
