added note.* metadata; switched from using plain html5 to using dojo in forms -- may be temporary

--- a/public/units/debitors/forms/general.html
+++ b/public/units/debitors/forms/general.html
@@ -1,20 +1,20 @@
 <link rel="stylesheet" href="/units/debitors/forms/general.css">
 <form id="bika-units-debitors-forms-general-form">
   <fieldset class="tab">
-    <label>Debitor: <input type="text" id="bika-units-debitors-forms-general-debitor" name="debitor"></label>	 
-    <label>Name: <input type="text" name="name"></label>	 
-    <label>Address: <input type="text" name="address_1"></label>	 
-    <label>Address: <input type="text" name="address_2"></label>		 
-    <label>Country: <input id="bika-units-debitors-forms-general-country" name="country"></label> 
-    <label>City: <input id="bika-units-debitors-forms-general-city" name="city"></label>	 
-    <label>Att.: <input type="text" name="att"></label>	 
+    <label>Debitor: <select id="bika-units-debitors-forms-general-debitor" name="debitor"></select></label>	 
+    <label>Name: <input id="bika-units-debitors-forms-general-name"></label>	 
+    <label>Address: <input id="bika-units-debitors-forms-general-address_1"></label>	 
+    <label>Address: <input id="bika-units-debitors-forms-general-address_2"></label>		 
+    <label>Country: <select id="bika-units-debitors-forms-general-country"></select></label> 
+    <label>City: <select id="bika-units-debitors-forms-general-city"></select></label>	 
+    <label>Att.: <input id="bika-units-debitors-forms-general-att"></label>	 
   </fieldset> 
   <fieldset class="tab">
-    <label>Locked: <input type="checkbox" name="locked"></label>
+    <label>Locked: <input type="checkbox" id="bika-units-debitors-forms-general-locked"></label>
     <button id="bika-units-debitors-forms-general-totals">Show Totals</button>	 
-    <label>Debitor Group: <input name="group_id"></label>
-    <label>Email: <input type="email" name="email"></label>	
-    <label>Telephone: <input type="tel" name="phone"></label>	 
+    <label>Debitor Group: <input id="bika-units-debitors-forms-general-group_id"></label>
+    <label>Email: <input type="email" id="bika-units-debitors-forms-general-email"></label>	
+    <label>Telephone: <input type="tel" id="bika-units-debitors-forms-general-phone"></label>	 
   </fieldset>
 </form>
 <script src="/units/debitors/forms/general.js"></script>
