--- a/public/units/debitors/forms/note.html
+++ b/public/units/debitors/forms/note.html
@@ -1,11 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8">	
-     </head>
-	 <body class="claro">
-		    <div class='divContent'>
-			    <textarea onBlur="sendData('note')" id='note' name='note'></textarea>
-		    </div>
-     </body>
-</html>
+<link rel="stylesheet" href="/units/debitors/forms/note.css">
+<form id="bika-units-debitors-forms-note-form">
+  <textarea name='note' placeholder="Enter a note about the debitor"></textarea>
+</form>
+<script src="/units/debitors/forms/note.js"></script>
