Clear total on refresh

--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -215,6 +215,9 @@
             }
           }
         }
+
+        var td_budget = dom.byId(tableid + '-budgetTotal');
+        domAttr.set(td_budget, 'innerHTML', '');
       }
     }
 
