one-way databinding worked out; still some kinks; removed debitors/forms/text refs; added bika/form; bika/select

--- a/public/units/debitors/forms/general.html
+++ b/public/units/debitors/forms/general.html
@@ -1,20 +1,19 @@
 <link rel="stylesheet" href="/units/debitors/forms/general.css">
 <form id="bika-units-debitors-forms-general-form">
   <fieldset class="tab">
-    <label>Debitor: <select id="bika-units-debitors-forms-general-debitor" name="debitor"></select></label>	 
-    <label>Name: <input id="bika-units-debitors-forms-general-name"></label>	 
-    <label>Address: <input id="bika-units-debitors-forms-general-address_1"></label>	 
-    <label>Address: <input id="bika-units-debitors-forms-general-address_2"></label>		 
-    <label>Country: <select id="bika-units-debitors-forms-general-country"></select></label> 
-    <label>City: <select id="bika-units-debitors-forms-general-city"></select></label>	 
-    <label>Att.: <input id="bika-units-debitors-forms-general-att"></label>	 
+    <label>Org. ID: <select id="bika-units-debitors-forms-general-org" name="id"></select></label>	 
+    <label>Org. Name: <input id="bika-units-debitors-forms-general-name" name="name"></label>
+    <label>Address: <input id="bika-units-debitors-forms-general-address_1" name="address_1"></label>
+    <label>Address: <input id="bika-units-debitors-forms-general-address_2" name="address_2"></label>
+    <label>City: <select id="bika-units-debitors-forms-general-city" name="city"></select></label>
+    <label>Region: <select id="bika-units-debitors-forms-general-region" name="region"></select></label>
+    <label>Country: <select id="bika-units-debitors-forms-general-country" name="country"></select></label> 
   </fieldset> 
   <fieldset class="tab">
-    <label>Locked: <input type="checkbox" id="bika-units-debitors-forms-general-locked"></label>
-    <button id="bika-units-debitors-forms-general-totals">Show Totals</button>	 
-    <label>Debitor Group: <input id="bika-units-debitors-forms-general-group_id"></label>
-    <label>Email: <input type="email" id="bika-units-debitors-forms-general-email"></label>	
-    <label>Telephone: <input type="tel" id="bika-units-debitors-forms-general-phone"></label>	 
+    <label>Locked: <input type="checkbox" id="bika-units-debitors-forms-general-locked" name="locked"></label>
+    <label>Email: <input type="email" id="bika-units-debitors-forms-general-email" name="email"></label>
+    <label>Telephone: <input type="tel" id="bika-units-debitors-forms-general-phone" name="phone"></label>
+    <button id="bika-units-debitors-forms-general-totals">Show Totals</button>
   </fieldset>
 </form>
 <script src="/units/debitors/forms/general.js"></script>
