added fancy login glow effects

--- a/public/login.html
+++ b/public/login.html
@@ -42,6 +42,12 @@
       .row input {
         float: right;
         border-radius: 4px;
+        padding: 5px;
+        border: 1px solid #dadada;
+      }
+
+      .row input:focus {
+        box-shadow: 0 0 10px green;
       }
 
       .control {
