petite retouche, page usermanager

--- a/public/units/permission/index.html
+++ b/public/units/permission/index.html
@@ -169,7 +169,7 @@
               userStore = new JsonRest({
                         target: 'data/'
                     });
-              var coloumns = [{id:'id', field:'id', label:'ID'},
+              var coloumns = [{id:'first', field:'first', label:'First Name'},
                               {id:'username', field:'username', label:'User Name'},
                               {id:'email', field:'email', label:'Email'}];
               userGrid = new (declare([OnDemandGrid, Selection]))({
