TODO note, slight refactor

--- a/public/units/budgeting/index.html
+++ b/public/units/budgeting/index.html
@@ -86,6 +86,12 @@ var tablebind;
     ///////
     
     /////
+    // TODO /n
+    //  -Apportion budget row (button should make input and submit button visible); spread number across all months for budget
+    //  -uniform width column headers always
+    /////
+    
+    /////
     // Current - Total is an input, any value inserted into total should be spread evenly across te months
     /////
     var uid = "bika-units-budgeting";
