--- a/public/units/permission/index.html
+++ b/public/units/permission/index.html
@@ -111,6 +111,7 @@
                 }
                 f.unCheckAll();
                 formReInit();
+                userGrid.refresh();
               });
             }
             function modifier(){
@@ -124,6 +125,7 @@
             }
            function supprimer(){
             crudStore.query({t:'user', ids:{id:[selectedUserId]}, action:'DEL'}); 
+            userGrid.refresh();
             }
             function annuler(){
               formReInit();
