dgrid in invoicing does not work; re-wrote more generic css; need to improve bika/Form; all three content panes update on clicks; need to hook up client-server exchange

--- a/public/units/debitors/forms/general.html
+++ b/public/units/debitors/forms/general.html
@@ -1,19 +1,21 @@
 <link rel="stylesheet" href="/units/debitors/forms/general.css">
-<form id="bika-units-debitors-forms-general-form">
-  <fieldset class="tab">
-    <label>Org. ID: <select id="bika-units-debitors-forms-general-org" name="id"></select></label>	 
-    <label>Org. Name: <input id="bika-units-debitors-forms-general-name" name="name"></label>
-    <label>Address: <input id="bika-units-debitors-forms-general-address_1" name="address_1"></label>
-    <label>Address: <input id="bika-units-debitors-forms-general-address_2" name="address_2"></label>
-    <label>City: <select id="bika-units-debitors-forms-general-city" name="city"></select></label>
-    <label>Region: <select id="bika-units-debitors-forms-general-region" name="region"></select></label>
-    <label>Country: <select id="bika-units-debitors-forms-general-country" name="country"></select></label> 
-  </fieldset> 
-  <fieldset class="tab">
-    <label>Locked: <input type="checkbox" id="bika-units-debitors-forms-general-locked" name="locked"></label>
-    <label>Email: <input type="email" id="bika-units-debitors-forms-general-email" name="email"></label>
-    <label>Telephone: <input type="tel" id="bika-units-debitors-forms-general-phone" name="phone"></label>
-    <button id="bika-units-debitors-forms-general-totals">Show Totals</button>
-  </fieldset>
-</form>
+<div class="bika-form">
+  <form id="bika-units-debitors-forms-general-form">
+    <fieldset>
+      <label>Org. ID: <select id="bika-units-debitors-forms-general-org" name="id"></select></label>	 
+      <label>Org. Name: <input id="bika-units-debitors-forms-general-name" name="name"></label>
+      <label>Address: <input id="bika-units-debitors-forms-general-address_1" name="address_1"></label>
+      <label>Address: <input id="bika-units-debitors-forms-general-address_2" name="address_2"></label>
+      <label>City: <select id="bika-units-debitors-forms-general-city" name="city"></select></label>
+      <label>Region: <select id="bika-units-debitors-forms-general-region" name="region"></select></label>
+      <label>Country: <select id="bika-units-debitors-forms-general-country" name="country"></select></label> 
+    </fieldset> 
+    <fieldset>
+      <label>Locked: <input type="checkbox" id="bika-units-debitors-forms-general-locked" name="locked"></label>
+      <label>Email: <input type="email" id="bika-units-debitors-forms-general-email" name="email"></label>
+      <label>Telephone: <input type="tel" id="bika-units-debitors-forms-general-phone" name="phone"></label>
+      <button id="bika-units-debitors-forms-general-totals">Show Totals</button>
+    </fieldset>
+  </form>
+</div>
 <script src="/units/debitors/forms/general.js"></script>
