--- a/public/units/debitors/forms/invoicing.html
+++ b/public/units/debitors/forms/invoicing.html
@@ -1,21 +1,17 @@
-<form name="bika-units-debitors-forms-invoicing-form">
-  <fieldset>      
-    <label>Payment: <input id="bika-units-debitors-forms-invoicing-payment"></label>	 
-    <label>Contact Person: <input id="bika-units-debitors-forms-invoicing-contact"></label>	 
-    <label>Tax Registration No.: <input id="bika-units-debitors-forms-invoicing-taxreg"></label>	 
-    <label>Max Credit: <input id="bika-units-debitors-forms-invoicing-maxcredit"></label>	 
-    <label>Interests: <input type="checkbox" id="bika-units-debitors-forms-invoicing-interest"></label>
-    <label>Dun: <input type="checkbox" id="bika-units-debitors-forms-invoicing-dun"></label>
-  </fieldset>
-  <fieldset>
-    <!--
-    <label>Price Groups</label><label class='alignLab1' >%</label><label class='alignLab' >Sales Price Lists </label>
-    <label><input id="bika-units-debitors-forms-invoicing-" class="inputGen"> </label><label class='alignCom1' id="pour1" ></label>
-    <label class='alignCom' ><input id="bika-units-debitors-forms-inputSales1" class="inputGen"></label>	 
-    <label><input id="bika-units-debitors-forms-invoicing-" class="inputGen"> </label><label class='alignCom1' id="pour2" ></label>
-    <label class='alignCom' ><input id="bika-units-debitors-forms-" class="inputGen"></label>
-    -->
-    <div id="bika-units-debitors-forms-invoicing-pricegrid"></div>
-  </fieldset>
-</form>
+<link rel="stylesheet" href="/units/debitors/forms/invoicing.css">
+<!-- we wrap in divs because dojo's form does not respect native classes -->
+<!-- FIXME: create bika/Form so that it -->
+<div class="bika-form">
+  <form class="bika-form" id="bika-units-debitors-forms-invoicing-form">
+   <fieldset>      
+     <label>Payment: <select id="bika-units-debitors-forms-invoicing-payment" name="payment"></select></label>	 
+     <label>Contact Person: <select id="bika-units-debitors-forms-invoicing-contact" name="contact"></select></label>	 
+      <label>Tax Registration No.: <input id="bika-units-debitors-forms-invoicing-taxreg" name="tax_id"></label>	 
+      <label>Max Credit: <input id="bika-units-debitors-forms-invoicing-maxcredit" name="max_credit"></label>	 
+    </fieldset>
+    <fieldset>
+      <div id="bika-units-debitors-forms-invoicing-grid"></div>
+    </fieldset>
+  </form>
+</div>
 <script src="/units/debitors/forms/invoicing.js"></script>
