--- a/public/units/debitors/forms/note.html
+++ b/public/units/debitors/forms/note.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="/units/debitors/forms/note.css">
-<form id="bika-units-debitors-forms-note-form">
-  <textarea name='note' placeholder="Enter a note about the debitor"></textarea>
-</form>
+<div class="bika-form">
+  <form id="bika-units-debitors-forms-note-form">
+    <textarea name='note' placeholder="Enter a note about the debitor"></textarea>
+  </form>
+</div>
 <script src="/units/debitors/forms/note.js"></script>
